# scprog-excercises

./: SkipList.cpp
Exercise_1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  input.txt  remainderFromBinaryString.cpp  remainderFromBinaryString.h  solution_1.cpp
Exercise_2/: FileInputBitStream.cpp  FileInputBitStream.h  FileOutputBitStream.cpp  FileOutputBitStream.h  InputBitStream.h  LZW.cpp  LZW.h  OutputBitStream.h  solution_2.cpp
Exercise_3/: CMakeLists.txt  DerivativeArray.cpp  DerivativeArray.h  EulerIntegrator.cpp  EulerIntegrator.h  Exercise3.cpp  Force.cpp  Force.h  FourthOrderRungeKuttaIntegrator.cpp  FourthOrderRungeKuttaIntegrator.h  Integrator.h  Particle.cpp  Particle.h  Point.cpp  Point.h  SecondOrderRungeKuttaIntegrator.cpp  SecondOrderRungeKuttaIntegrator.h  animate_pendulum.plt  plot_pendulum.plt
Exercise_4/: CMakeCache.txt  CMakeLists.txt  DerivativeArray.cpp  DerivativeArray.h  Environment.h  EulerIntegrator.cpp  EulerIntegrator.h  Exercise4.cpp  FourthOrderRungeKuttaIntegrator.cpp  FourthOrderRungeKuttaIntegrator.h  GravityEnvironment.cpp  GravityEnvironment.h  Integrator.h  PendulumEnvironment.cpp  PendulumEnvironment.h  Point.h  SecondOrderRungeKuttaIntegrator.cpp  SecondOrderRungeKuttaIntegrator.h  animate_gravity.plt  gravity.txt  particle.txt  pendulum.txt  plot_gravity.plt
Exercise_5/: CMakeLists.txt  Exercise5.cpp  SkipList.cpp  SkipList.h
Exercise_6/: CMakeLists.txt  Exercise6.cpp  Hash.cpp  Hash.h  SkipList.h  input.txt
Exercise_7/: input.txt  output.txt
Exercise_8/: Exercise8.cpp  StopWatch.h  animate_disk.plt  (+1 more)
